--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,11 +49,9 @@ set(
     ${Source_Files}
 )
 
-add_library(
-    ${PROJECT_NAME} 
-    STATIC
-    ${ALL_FILES}
-)
+add_executable(
+    ${PROJECT_NAME}  ${ALL_FILES}
+) 
 
 #target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
